# hotly-app

./: .coveragerc  .env.example  .env.production.example  .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  bandit.yaml  database-schema.md  debug_url_norm.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  rules.md  test_diversity.py  test_enhanced_cache.py  test_feedback.py  test_final_summary.py  test_firebase_manual.py  test_firebase_simple.py  test_gemini_video.py  test_link_analysis_direct.py  test_link_analysis_integration.py  test_link_analysis_simple.py  test_manual.py  test_ranking_integration.py  test_search_optimization_summary.py  test_simple.py  test_simple_cache.py  test_simple_extractor.py  test_simple_feedback.py  test_simple_gemini.py  test_simple_integration.py  test_simple_place_extractor.py  test_url_normalization.py  todo-10b.md  (+2 more)
alembic/: env.py
backend/: .env.example  .flake8  Dockerfile  Dockerfile.optimized  bandit.yaml  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml
backend/alembic/versions/: 001_create_places_table.py  002_create_auth_rls_policies.py  002_create_user_tables_postgresql.py  003_create_user_tags_table.py  004_add_archived_contents.py  005_add_content_types.py  006_add_gin_indexes_archived_contents.py  007_add_label_en_to_content_types.py
backend/app/: main.py
backend/app/core/: config.py  logging.py  security.py
backend/app/crud/: __init__.py  base.py  place.py  user.py
backend/app/db/: base.py  elasticsearch.py  session.py
backend/app/exceptions/: __init__.py  ai.py  auth.py  cache.py  database.py  external.py  media.py
backend/app/middleware/: auth_middleware.py  auth_rate_limit.py  jwt_middleware.py  rate_limit_middleware.py  security_middleware.py
backend/app/models/: __init__.py  archived_content.py  content_type.py  notification.py  place.py  search_preference.py  user.py  user_behavior.py  user_data.py  user_device.py  user_preference.py  user_settings.py  user_tag.py
backend/app/schemas/: advanced_filter.py  ai.py  archive.py  auth.py  cache.py  content_type.py  course_recommendation.py  filter.py  media.py  place.py  preference.py  search.py  search_optimization.py  tag.py  type_specific.py  user.py  user_data.py
backend/app/services/: image_upload_service.py  link_analyzer_client.py
backend/docs/: API_ENDPOINTS.md  CONTENT_EXTRACTION_ARCHITECTURE.md  FIREBASE_MIGRATION.md  FIREBASE_SETUP_GUIDE.md  GEMINI_INTEGRATION.md  MULTIMODAL_ANALYSIS_ARCHITECTURE.md  MULTIMODAL_IMPLEMENTATION.md
backend/scripts/: classify_tests.py  init-db.sql
backend/tests/: README.md  conftest.py
backend/tests/e2e/: test_auth_endpoints.py  test_notification_template_service.py  test_search_ux.py
backend/tests/framework/: test_pytest_configuration.py  test_test_helpers.py
backend/tests/integration/: test_api_link_analysis.py  test_auth_flow.py  test_auth_jwt_flow.py  test_place_management_integration.py  test_service_integration.py
backend/tests/tdd/: README.md
(+814 files in other folders)
